@@ -63,7 +63,8 @@
 			          tal:content="view/load_sendto_values"></textarea>
 
 			<div class="visualPadding">&nbsp;</div>
-			<input type="submit" name="pbn_save" value="Save" class="context" />
+			<input type="submit" name="pbn_save" value="Save" class="context"
+			       i18n:attributes="value"/>
 
 		</fieldset>
 	</form>
