@@ -1,18 +1,20 @@
 What is this?
 =============
 
-A Plone products.
-Add some configuration for sending email on new messages or replies on **Ploneboard** forum.
+An event based Plone product.
+Add some configuration to your Plone site for sending email on new messages or replies
+added on forums.
+
+You also need `Ploneboard`__ product to be installed.
+
+__ http://pypi.python.org/pypi/Products.Ploneboard
 
 TODO
 ----
 
-Current version only support global configuration; the long-term plan wanna reach forum (or forum area)
-local configurations.
-
-
-
-
-
+* Current version support global configuration and forum specific ones; the long-term
+  plan wanna reach also forum area configurations.
+* Also manipulate the FROM part of the mail, configurable globally, for single forum, etc.
+* Forum outside the Forum Area are not supported by the configuration UI.
 
 
