@@ -7,6 +7,8 @@ Changelog
 * Added local configuration for the Forum content.
 * The forum title added in the mail was not the real forum title.
 * Added some other infos to the sent mail.
+* Mail using BCC now supported.
+* Added i18n support and italian translation.
 
 0.2.0
 -----
